--- a/style.css
+++ b/style.css
@@ -50,6 +50,12 @@ textarea {
 
 /* ---------------- End Reset ----------------------- */
 
+html,
+body {
+  min-height: 100%;
+  height: 100%;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -57,8 +63,6 @@ body {
   background-color: var(--prim-blue);
   color: var(--neut-white);
   font-size: 15px;
-
-  height: 100%;
 }
 
 main {
@@ -75,7 +79,6 @@ main {
 
 .hero {
   height: 30vh;
-  min-height: 30%;
   width: 100%;
   background: url("./images/image-header-mobile.jpg") no-repeat;
   background-size: cover;
@@ -154,4 +157,38 @@ main {
 }
 .attribution a {
   color: hsl(228, 45%, 44%);
+}
+
+@media only screen and (min-width: 700px) {
+  body {
+    justify-content: center;
+    align-items: center;
+  }
+
+  main {
+    flex-direction: row-reverse;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+
+  .hero {
+    flex: 1 0 50%;
+    height: 100%;
+    background: url("./images/image-header-desktop.jpg");
+    background-size: cover;
+    border-radius: 0;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+
+  .content {
+    text-align: left;
+    padding: 2.5rem;
+  }
+
+  .stats {
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: left;
+  }
 }
